services/k8s/apps/cluster/gateway.yaml
# cf https://doc.traefik.io/traefik/reference/routing-configuration/kubernetes/gateway-api/
# cf https://kubernetes.io/docs/concepts/services-networking/gateway/

apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: traefik
spec:
  controllerName: traefik.io/gateway-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: traefik-gateway
  namespace: traefik
spec:
  gatewayClassName: traefik
  # tls fait par caddy proxmox
  listeners:
  - name: http
    protocol: HTTP
    port: 8000
    hostname: "*.blavogiez.fr"
    allowedRoutes:
      namespaces:
        from: All
